--- a/src/main/resources/com/example/gcalc/html/eqhelp.html
+++ b/src/main/resources/com/example/gcalc/html/eqhelp.html
@@ -3,8 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="../css/Style.css">
+    <script type="module" src="https://md-block.verou.me/md-block.js"></script>
 </head>
 <body>
-<h1>Eq Help</h1>
+<md-block src="../mdFiles/eqHelp.md" style="color: white">
+    ### Equation Help :
+
+    | Table Of Contents                             |
+    |-----------------------------------------------|
+    | [Equation List](#equationlist)                |
+    | [Equation Input Syntax](#equationinputsyntax) |
+
+
+
+    ### EquationList
+    .
+
+    .
+
+    .
+
+    .
+
+    .
+
+    .
+
+    .
+
+    .
+
+    .
+
+    .
+
+    .
+
+    .
+
+    .
+
+
+    ### EquationInputSyntax
+</md-block>
 </body>
 </html>
